Padding for Eligible Coverage Page

--- a/Views/eligiblecoverage.html
+++ b/Views/eligiblecoverage.html
@@ -208,7 +208,7 @@
 
         <div id="page-wrapper">
         	
-        		<div id='eligibleContent'>
+        		<div id='eligibleContent' style="margin-top: 65px">
         			
         		</div>
 
