Coverage Estimate Enhance

--- a/Views/costestimate.html
+++ b/Views/costestimate.html
@@ -213,7 +213,7 @@
         		</div>
 
             <div class="container" style="margin-top: 75px">
-                    <div id="jsonAnswer" class="jsonAnswer" >
+                    <div id="jsonAnswer" class="jsonAnswer" style="display:none" >
                         
                     </div>
             </div>
