Index Style Updates

--- a/Views/index.html
+++ b/Views/index.html
@@ -153,7 +153,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href="/"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        <a href="/index"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <!--<li>
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
@@ -188,7 +188,13 @@
                         <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
                     </li>-->
                     <li class="active">
-                        <a href="/eligiblecoverage"><i class="fa fa-fw fa-dashboard"></i> Eligible Coverage</a>
+                        <a href="/eligiblecoverage"><i class="fa fa-fw fa-dashboard"></i>View Coverage</a>
+                    </li>
+                    <li class="active">
+                        <a href="/searchdocs"><i class="fa fa-fw fa-dashboard"></i>Find Providers</a>
+                    </li>
+                    <li class="active">
+                        <a href="#"><i class="fa fa-fw fa-dashboard"></i>Make Payments</a>
                     </li>
                 </ul>
             </div>
@@ -238,7 +244,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="/eligiblecoverage">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -260,7 +266,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="/searchdocs">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -282,7 +288,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="/estimatecost">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
