--- a/Views/eligiblecoverage.html
+++ b/Views/eligiblecoverage.html
@@ -163,8 +163,8 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
-                        <a href="/"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                    <li>
+                        <a href="/index"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <!--<li>
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
@@ -199,7 +199,16 @@
                         <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
                     </li>-->
                     <li class="active">
-                        <a href="/eligiblecoverage"><i class="fa fa-fw fa-dashboard"></i> Eligible Coverage</a>
+                        <a href="/eligiblecoverage"><i class="fa fa-fw fa-check-square-o"></i>View Coverage</a>
+                    </li>
+                    <li>
+                        <a href="/searchdocs"><i class="fa fa-fw fa-search"></i>Find Providers</a>
+                    </li>
+                    <li>
+                        <a href="/estimatecost"><i class="fa fa-fw fa-shopping-cart"></i>Estimate Costs</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-fw fa-money"></i>Make Payments</a>
                     </li>
                 </ul>
             </div>
