--- a/Views/index.html
+++ b/Views/index.html
@@ -187,14 +187,17 @@
                     <li>
                         <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
                     </li>-->
-                    <li class="active">
-                        <a href="/eligiblecoverage"><i class="fa fa-fw fa-dashboard"></i>View Coverage</a>
+                    <li>
+                        <a href="/eligiblecoverage"><i class="fa fa-fw fa-check-square-o"></i>View Coverage</a>
                     </li>
-                    <li class="active">
-                        <a href="/searchdocs"><i class="fa fa-fw fa-dashboard"></i>Find Providers</a>
+                    <li>
+                        <a href="/searchdocs"><i class="fa fa-fw fa-search"></i>Find Providers</a>
                     </li>
-                    <li class="active">
-                        <a href="#"><i class="fa fa-fw fa-dashboard"></i>Make Payments</a>
+                    <li>
+                        <a href="/estimatecost"><i class="fa fa-fw fa-shopping-cart"></i>Estimate Costs</a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-fw fa-money"></i>Make Payments</a>
                     </li>
                 </ul>
             </div>
