Home Icon link Update

--- a/Views/costestimate.html
+++ b/Views/costestimate.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-	<title>SB Admin - Bootstrap Admin Template</title>
+	<title>PNCCare</title>
 
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
@@ -54,7 +54,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin</a>
+                <a class="navbar-brand" href="/index">PNCCare</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
