--- a/Views/index.html
+++ b/Views/index.html
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">PNCCare</a>
+                <a class="navbar-brand" href="/index">PNCCare</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
