--- a/Views/index.html
+++ b/Views/index.html
@@ -233,7 +233,7 @@
                 </div> -->
                 <!-- /.row -->
 
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-lg-3 col-md-6">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
@@ -322,7 +322,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <!-- /.row -->
 
                 <div class="row">
