--- a/Views/index.html
+++ b/Views/index.html
@@ -325,7 +325,7 @@
                 </div>
                 <!-- /.row -->
 
-                <!--<div class="row">
+                <<div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
@@ -336,7 +336,7 @@
                             </div>
                         </div>
                     </div>
-                </div>-->
+                </div>
                 <!-- /.row -->
 
                 <div class="row">
