--- a/Views/index.html
+++ b/Views/index.html
@@ -325,7 +325,7 @@
                 </div>
                 <!-- /.row -->
 
-                <div class="row" style="visible:false">
+                <div class="row" style="display:none">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
