Added get prices function and changed trading partner id in html

--- a/Views/searchdocs.html
+++ b/Views/searchdocs.html
@@ -36,7 +36,7 @@
               <select id="insurers" class="form-control" placeholder = "Pick Insurer">
 								<!--<label for="insurers">Pick Insurer</label>-->
 								<option value = "aetna">Aetna</option>
-                <option value = "highmark">Highmark</option>
+                <option value = "highmark_blue_cross_blue_shield_pa">Highmark</option>
               </select>
 				  </span>
             <span class="form-group-sm">
