HTML Nav Updates

--- a/Views/index.html
+++ b/Views/index.html
@@ -191,11 +191,11 @@
                         <a href="/eligiblecoverage"><i class="fa fa-fw fa-check-square-o"></i> View Coverage</a>
                     </li>
                     <li>
-                        <a href="/searchdocs"><i class="fa fa-fw fa-search"></i> Find Providers</a>
+                        <a href="/searchdoctors"><i class="fa fa-fw fa-search"></i> Find Providers</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="/estimatecost"><i class="fa fa-fw fa-shopping-cart"></i> Estimate Costs</a>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="#"><i class="fa fa-fw fa-money"></i> Make Payments</a>
                     </li>
