--- a/Views/searchdoctors.html
+++ b/Views/searchdoctors.html
@@ -195,12 +195,12 @@
                     <li>
                         <a href="/eligiblecoverage"><i class="fa fa-fw fa-check-square-o"></i> View Coverage</a>
                     </li>
-                    <li>
-                        <a href="/searchdocs"><i class="fa fa-fw fa-search"></i> Find Providers</a>
+                    <li class='active'>
+                        <a href="/searchdoctors"><i class="fa fa-fw fa-search"></i> Find Providers</a>
                     </li>
-                    <li class="active">
+                    <!--li class="active">
                         <a href="/estimatecost"><i class="fa fa-fw fa-shopping-cart"></i> Estimate Costs</a>
-                    </li>
+                    </li>-->
                     <li>
                         <a href="#"><i class="fa fa-fw fa-money"></i> Make Payments</a>
                     </li>
