--- a/Views/index.html
+++ b/Views/index.html
@@ -269,7 +269,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="/searchdocs">
+                            <a href="/searchdoctors">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -291,7 +291,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="/makepayment">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
