HTML Nav Updates

--- a/Views/index.html
+++ b/Views/index.html
@@ -197,7 +197,7 @@
                         <a href="/estimatecost"><i class="fa fa-fw fa-shopping-cart"></i> Estimate Costs</a>
                     </li>-->
                     <li>
-                        <a href="#"><i class="fa fa-fw fa-money"></i> Make Payments</a>
+                        <a href="/makepayment"><i class="fa fa-fw fa-money"></i> Make Payments</a>
                     </li>
                 </ul>
             </div>
