--- a/Views/makepayment.html
+++ b/Views/makepayment.html
@@ -187,7 +187,7 @@
                     <li>
                         <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
                     </li>-->
-                    <li class="active">
+                    <li>
                         <a href="/eligiblecoverage"><i class="fa fa-fw fa-check-square-o"></i> View Coverage</a>
                     </li>
                     <li>
@@ -196,8 +196,8 @@
                     <!--<li>
                         <a href="/estimatecost"><i class="fa fa-fw fa-shopping-cart"></i> Estimate Costs</a>
                     </li>-->
-                    <li>
-                        <a href="#"><i class="fa fa-fw fa-money"></i> Make Payments</a>
+                    <li class="active">
+                        <a href="/makepayment"><i class="fa fa-fw fa-money"></i> Make Payments</a>
                     </li>
                 </ul>
             </div>
