--- a/Views/login.html
+++ b/Views/login.html
@@ -24,21 +24,21 @@
         <div id="signup">
           <h1>Sign Up for Free</h1>
 
-          <form action="/" method="post">
-
+          <form action="/signup" method="post">
+		  
           <div class="top-row">
             <div class="field-wrap">
               <label>
                 First Name<span class="req">*</span>
               </label>
-              <input type="text" required autocomplete="off" />
+              <input type="text" required autocomplete="off" name="fname"/>
             </div>
 
             <div class="field-wrap">
               <label>
                 Last Name<span class="req">*</span>
               </label>
-              <input type="text"required autocomplete="off"/>
+              <input type="text"required autocomplete="off"name="lname" />
             </div>
           </div>
 
@@ -46,14 +46,40 @@
             <label>
               Email Address<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off"/>
+            <input type="email"required autocomplete="off" name="emailaddr" />
           </div>
 
           <div class="field-wrap">
             <label>
               Set A Password<span class="req">*</span>
             </label>
-            <input type="password"required autocomplete="off"/>
+            <input type="password"required autocomplete="off" name="passwrd" />
+          </div>
+		  
+		  <div class="field-wrap">
+		  
+            <label>
+              Provider Name<span class="req"> * <select class="form-control" name="providername">
+					<option value="HighMark">HighMark</option>
+					<option value="Aethna">Aethna</option>
+				</select></span></span>
+            </label>
+            <input type="text"required autocomplete="off" name="providername" />
+		  
+            	<!--<label>
+					Provider Name<span class="req"><select class="form-control" name="providername">
+					<option value="HighMark">HighMark</option>
+					<option value="Aethna">Aethna</option>
+				</select></span>
+				</label>-->
+				
+			</div>
+		  
+		  <div class="field-wrap">
+            <label>
+              Member ID<span class="req">*</span>
+            </label>
+            <input type="text"required autocomplete="off" name="memberid" />
           </div>
 
           <button type="submit" class="button button-block"/>Get Started</button>
@@ -65,20 +91,20 @@
         <div id="login">
           <h1>Welcome Back!</h1>
 
-          <form action="/" method="post">
+          <form action="/login" method="post">
 
             <div class="field-wrap">
             <label>
               Email Address<span class="req">*</span>
             </label>
-            <input type="email"required autocomplete="off"/>
+            <input type="email"required autocomplete="off" name="email"/>
           </div>
 
           <div class="field-wrap">
             <label>
               Password<span class="req">*</span>
             </label>
-            <input type="password"required autocomplete="off"/>
+            <input type="password"required autocomplete="off" name="password"/>
           </div>
 
           <p class="forgot"><a href="#">Forgot Password?</a></p>
