login page update

--- a/Views/login.html
+++ b/Views/login.html
@@ -59,10 +59,7 @@
 		  <div class="field-wrap">
 		  
             <label>
-              Provider Name<span class="req"> * <select class="form-control" name="providername">
-					<option value="HighMark">HighMark</option>
-					<option value="Aethna">Aethna</option>
-				</select></span></span>
+              Provider Name<span class="req">*</span>
             </label>
             <input type="text"required autocomplete="off" name="providername" />
 		  
