--- a/Views/makepayment.html
+++ b/Views/makepayment.html
@@ -211,7 +211,7 @@
                     <div class="col-lg-12">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Transactions Panel</h3>
+                                <h3 class="panel-title" style="width:80%"><i class="fa fa-money fa-fw"></i> Transaction History</h3>
                             </div>
                             <div class="panel-body">
                                 <div class="table-responsive">
