--- a/Views/index.html
+++ b/Views/index.html
@@ -242,7 +242,7 @@
                                         <i class="fa fa-check-square-o fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">26</div>
+                                        <div class="huge"></div>
                                         <div>View Coverage!</div>
                                     </div>
                                 </div>
@@ -264,7 +264,7 @@
                                         <i class="fa fa-search fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">12</div>
+                                        <div class="huge"></div>
                                         <div>Search Providers!</div>
                                     </div>
                                 </div>
@@ -286,7 +286,7 @@
                                         <i class="fa fa-money fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">13</div>
+                                        <div class="huge"></div>
                                         <div>Make A Payment!</div>
                                     </div>
                                 </div>
@@ -308,7 +308,7 @@
                                         <i class="fa fa-area-chart fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">124</div>
+                                        <div class="huge"></div>
                                         <div>Spending Analytics!</div>
                                     </div>
                                 </div>
