--- a/Views/index.html
+++ b/Views/index.html
@@ -243,7 +243,7 @@
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge"></div>
-                                        <div>View Coverage!</div>
+                                        <div><h3>View Coverage!</h3></div>
                                     </div>
                                 </div>
                             </div>
@@ -265,7 +265,7 @@
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge"></div>
-                                        <div>Search Providers!</div>
+                                        <div><h3>Search Providers!</h3></div>
                                     </div>
                                 </div>
                             </div>
@@ -287,7 +287,7 @@
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge"></div>
-                                        <div>Make A Payment!</div>
+                                        <div><h3>Make A Payment!</h3></div>
                                     </div>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     </div>
                                     <div class="col-xs-9 text-right">
                                         <div class="huge"></div>
-                                        <div>Spending Analytics!</div>
+                                        <div><h3>Analytics!</h3></div>
                                     </div>
                                 </div>
                             </div>
@@ -343,7 +343,7 @@
                     <div class="col-lg-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Donut Chart</h3>
+                                <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Spend Breakdown</h3>
                             </div>
                             <div class="panel-body">
                                 <div id="morris-donut-chart"></div>
@@ -362,35 +362,35 @@
                                 <div class="list-group">
                                     <a href="#" class="list-group-item">
                                         <span class="badge">just now</span>
-                                        <i class="fa fa-fw fa-calendar"></i> Calendar updated
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">4 minutes ago</span>
-                                        <i class="fa fa-fw fa-comment"></i> Commented on a post
+                                        <i class="fa fa-fw fa-calendar"></i> Dentist Appt - 6/30/2017
                                     </a>
                                     <a href="#" class="list-group-item">
                                         <span class="badge">23 minutes ago</span>
-                                        <i class="fa fa-fw fa-truck"></i> Order 392 shipped
+                                        <i class="fa fa-fw fa-money"></i> Invoice 324 has been paid
                                     </a>
                                     <a href="#" class="list-group-item">
                                         <span class="badge">46 minutes ago</span>
                                         <i class="fa fa-fw fa-money"></i> Invoice 653 has been paid
                                     </a>
                                     <a href="#" class="list-group-item">
-                                        <span class="badge">1 hour ago</span>
-                                        <i class="fa fa-fw fa-user"></i> A new user has been added
-                                    </a>
-                                    <a href="#" class="list-group-item">
                                         <span class="badge">2 hours ago</span>
-                                        <i class="fa fa-fw fa-check"></i> Completed task: "pick up dry cleaning"
-                                    </a>
-                                    <a href="#" class="list-group-item">
-                                        <span class="badge">yesterday</span>
-                                        <i class="fa fa-fw fa-globe"></i> Saved the world
+                                        <i class="fa fa-fw fa-check"></i> Primary Care Checkup - 1/15/2017
                                     </a>
                                     <a href="#" class="list-group-item">
                                         <span class="badge">two days ago</span>
-                                        <i class="fa fa-fw fa-check"></i> Completed task: "fix error on sales page"
+                                        <i class="fa fa-fw fa-money"></i> Invoice 2342 has been paid
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">46 minutes ago</span>
+                                        <i class="fa fa-fw fa-money"></i> Invoice 653 has been paid
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">2 hours ago</span>
+                                        <i class="fa fa-fw fa-check"></i> Primary Care Checkup - 1/15/2017
+                                    </a>
+                                    <a href="#" class="list-group-item">
+                                        <span class="badge">two days ago</span>
+                                        <i class="fa fa-fw fa-money"></i> Invoice 2342 has been paid
                                     </a>
                                 </div>
                                 <div class="text-right">
