--- a/Views/makepayment.html
+++ b/Views/makepayment.html
@@ -273,7 +273,7 @@
     </div>
     <!-- /#wrapper -->
 
-    !-- MODAL WINDOW -->
+    <!-- MODAL WINDOW -->
     <div class='modal fade' id='myModal'>
         <div class='modal-dialog'>
             <div class='modal-content'>
