--- a/Views/makepayment.html
+++ b/Views/makepayment.html
@@ -43,7 +43,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/index">PNCCare</a>
+                <a href="/index">
+                    <img border="0" alt="PNCCares" src="./assets/pnccareslogo.png" width=115>
+                </a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -198,6 +200,9 @@
                     </li>-->
                     <li class="active">
                         <a href="/makepayment"><i class="fa fa-fw fa-money"></i> Make Payments</a>
+                    </li>
+                    <li>
+                        <a href="/analytics"><i class="fa fa-fw fa-bar-chart-o"></i> Explore Analytics</a>
                     </li>
                 </ul>
             </div>
