--- a/Views/analytics.html
+++ b/Views/analytics.html
@@ -43,7 +43,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/index">PNCCare</a>
+                <a href="/index">
+                    <img border="0" alt="PNCCares" src="./assets/pnccareslogo.png" width=100 height=50>
+                </a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -196,8 +198,11 @@
                     <!--<li>
                         <a href="/estimatecost"><i class="fa fa-fw fa-shopping-cart"></i> Estimate Costs</a>
                     </li>-->
-                    <li class="active">
+                    <li>
                         <a href="/makepayment"><i class="fa fa-fw fa-money"></i> Make Payments</a>
+                    </li>
+                    <li class="active"> 
+                        <a href="/analytics"><i class="fa fa-fw fa-bar-chart-o"></i> Explore Analytics</a>
                     </li>
                 </ul>
             </div>
