--- a/Views/makepayment.html
+++ b/Views/makepayment.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a href="/index">
-                    <img border="0" alt="PNCCares" src="./assets/pnccareslogo.png" width=115>
+                    <img border="0" alt="PNCCares" src="./assets/pnccareslogo.png" width=100 height=50>
                 </a>
             </div>
             <!-- Top Menu Items -->
