--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -7,13 +7,13 @@ html {
 }
 
 body {
-  background: #c1bdba;
+  background: #101010;
   font-family: 'Titillium Web', sans-serif;
 }
 
 a {
   text-decoration: none;
-  color: #1ab188;
+  color: #337ab7;
   -webkit-transition: .5s ease;
   transition: .5s ease;
 }
@@ -22,7 +22,7 @@ a:hover {
 }
 
 .form {
-  background: rgba(19, 35, 47, 0.9);
+  background: rgba(255, 255, 255, .95);
   padding: 40px;
   max-width: 600px;
   margin: 40px auto;
@@ -45,7 +45,7 @@ a:hover {
   text-decoration: none;
   padding: 15px;
   background: rgba(160, 179, 176, 0.25);
-  color: #a0b3b0;
+  color: #000000;
   font-size: 20px;
   float: left;
   width: 50%;
@@ -55,11 +55,11 @@ a:hover {
   transition: .5s ease;
 }
 .tab-group li a:hover {
-  background: #179b77;
-  color: #ffffff;
+  background: #337ab7;
+  color: #000000;
 }
 .tab-group .active a {
-  background: #1ab188;
+  background: #337ab7;
   color: #ffffff;
 }
 
@@ -69,7 +69,7 @@ a:hover {
 
 h1 {
   text-align: center;
-  color: #ffffff;
+  color: #000000;
   font-weight: 300;
   margin: 0 0 40px;
 }
@@ -79,7 +79,7 @@ label {
   -webkit-transform: translateY(6px);
           transform: translateY(6px);
   left: 13px;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgba(0, 0, 0, 0.8);
   -webkit-transition: all 0.25s ease;
   transition: all 0.25s ease;
   -webkit-backface-visibility: hidden;
@@ -88,7 +88,7 @@ label {
 }
 label .req {
   margin: 2px;
-  color: #1ab188;
+  color: #337ab7;
 }
 
 label.active {
@@ -121,7 +121,7 @@ input, textarea {
 }
 input:focus, textarea:focus {
   outline: 0;
-  border-color: #1ab188;
+  border-color: #337ab7;
 }
 
 textarea {
@@ -157,14 +157,14 @@ textarea {
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .1em;
-  background: #1ab188;
+  background: #337ab7;
   color: #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   -webkit-appearance: none;
 }
 .button:hover, .button:focus {
-  background: #179b77;
+  background: #337ab7;
 }
 
 .button-block {
