Login Style Updates

--- a/Views/login.html
+++ b/Views/login.html
@@ -15,12 +15,15 @@
 <body>
   <div class="form">
 
-      <ul class="tab-group">
+      <ul class="tab-group" style="margin-bottom:0px">
         <li class="tab active"><a href="#signup">Sign Up</a></li>
         <li class="tab"><a href="#login">Log In</a></li>
       </ul>
 
       <div class="tab-content">
+        <div>
+            <img border="0" alt="PNCCares" src="./assets/pnccareslogo.png">
+        </div>
         <div id="signup">
           <h1>Sign Up for Free</h1>
 
@@ -86,6 +89,9 @@
         </div>
 
         <div id="login">
+          <div>
+            <img border="0" alt="PNCCares" src="./assets/pnccareslogo.png">
+        </div>
           <h1>Welcome Back!</h1>
 
           <form action="/login" method="post">
