--- a/Views/analytics.html
+++ b/Views/analytics.html
@@ -213,7 +213,30 @@
 
             <div class="container-fluid" style="margin-top: 75px">
 
+                <div class='row'>
 
+                    <div class='col-md-6'>
+                        <img border="0" alt="PNCCares" src="./assets/image003.png" style="width:100%" >
+                    </div>
+                    <div class='col-md-6'>
+                        <img border="0" alt="PNCCares" src="./assets/image006.png" style="width:100%" >
+                    </div>
+
+                </div>
+
+                <br/>
+                <br/>
+
+                <div class='row'>
+
+                    <div class='col-md-6'>
+                        <img border="0" alt="PNCCares" src="./assets/image008.png" style="width:100%" >
+                    </div>
+                    <div class='col-md-6'>
+                        <img border="0" alt="PNCCares" src="./assets/image010.png" style="width:100%" >
+                    </div>
+
+                </div>
 
             </div>
             <!-- /.container -->
