Added searchdoc stylesheet reference

--- a/Views/searchdoctors.html
+++ b/Views/searchdoctors.html
@@ -16,8 +16,8 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    
-	
+    <link href="css/searchdocsstyles.css" rel="stylesheet">
+
 	 <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -215,7 +215,7 @@
         </nav>
 
         <div id="page-wrapper">
-        	
+
             <!-- begin template -->
             <!--<div class="navbar navbar-custom navbar-fixed-top">
             <div class="navbar-header"><a class="navbar-brand" href="#">Shop Providers</a>
@@ -244,7 +244,7 @@
                         </select>
                             </span>
                         <span class="form-group-sm">
-                                        
+
                                         <select class = "form-control" id = "cpt">
                                         <option value="99201">Evaluation and Management</option>
                                         <option value="00100">Anesthesia</option>
@@ -255,7 +255,7 @@
                         </span>
                         <input type="text" id="zip" class="form-control" placeholder="Zipcode">
                                     <button type="button" class="btn btn-default" onclick="searchdoc('\searchdoc')"><span class="glyphicon glyphicon-search"></span></button>
-                       
+
 
                     </div>
                 </form>
