--- a/Views/index.html
+++ b/Views/index.html
@@ -318,7 +318,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="/analytics">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
